[project]
name = "desktop-skill"
version = "0.1.0"
description = "Desktop skill to control mouse and keyboard"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Patrick Porto" }
]
keywords = ["desktop", "automation", "pyautogui", "ai", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyautogui>=0.9.54",
    "typer>=0.21.1",
]

[project.scripts]
desktop-skill = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commands"]

