[project]
name = "desktop-agent"
version = "0.1.0"
description = "AI agent skill for desktop automation using PyAutoGUI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Patrick Porto" }
]
keywords = ["desktop", "automation", "pyautogui", "ai", "agent", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyautogui>=0.9.54",
    "typer>=0.21.1",
]

[project.scripts]
desktop-agent = "desktop_agent:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desktop_agent"]
